Fix first section alignement

--- a/content/media/css/style.css
+++ b/content/media/css/style.css
@@ -39,7 +39,6 @@ section {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.2s ease-in-out;
     padding: 1em;
-    /* vertical-align: middle; */
 }
 
 section:hover {
@@ -75,11 +74,17 @@ img {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    align-items: center;
 }
 
 #section1 article {
     width: 100%;
+}
+
+#section1 .imgContainer {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 #laptop {
